ported carousel and forms on login and registration

--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -4,18 +4,18 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<div class="row-fluid" id="register">
-    <div class="span4">
+<div class="row" id="register">
+    <div class="col-md-4">
 		{% include 'functions/alert.twig' with {'selector' : 'register'} %}
-		<form id="form-register" action="{{filename}}" method="post">
+		<form id="form-register" action="{{filename}}" method="post" role="form">
 			<label for="username"></label>
-			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}" pattern="[a-zA-Z0-9_]+" title="{% trans %}Your username may contain letters, numbers and underscores and must be between 3 and 16 characters long.{% endtrans %}" {% if username %} value="{{username}}" {% endif %}maxlength="16" {% if username_invalid or not username %}autofocus {% endif %}required>
+			<input type="text" class="form-control" name="username" id="username" placeholder="{% trans "Username" %}" pattern="[a-zA-Z0-9_]+" title="{% trans %}Your username may contain letters, numbers and underscores and must be between 3 and 16 characters long.{% endtrans %}" {% if username %} value="{{username}}" {% endif %}maxlength="16" {% if username_invalid or not username %}autofocus {% endif %}required>
 			<label for="email"></label>
-			<input type="email" class="input-block-level" name="email" id="email" placeholder="{% trans "Email address" %}" title="{% trans %}We require your email address so that we can verify you if you should forget your login details.{% endtrans %}" {% if email%}value="{{email}}" {% endif %}required>
+			<input type="email" class="form-control" name="email" id="email" placeholder="{% trans "Email address" %}" title="{% trans %}We require your email address so that we can verify you if you should forget your login details.{% endtrans %}" {% if email%}value="{{email}}" {% endif %}required>
 			<label for="password"></label>
-			<input type="password" class="input-block-level" name="password" id="password" placeholder="{% trans "Password" %}" title="{% trans %}You password is stored securely. We require at least 8 characters for your security and are unable to send you this password if you should forget it.{% endtrans %}" required>
+			<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" title="{% trans %}You password is stored securely. We require at least 8 characters for your security and are unable to send you this password if you should forget it.{% endtrans %}" required>
 			<label for="password-repeat"></label>
-			<input type="password" class="input-block-level" name="password-repeat" id="password-repeat" placeholder="{%trans "Confirm password" %}" title="{% trans %}Please repeat your password to ensure you have spellt it correctly.{% endtrans %}" required>
+			<input type="password" class="form-control" name="password-repeat" id="password-repeat" placeholder="{%trans "Confirm password" %}" title="{% trans %}Please repeat your password to ensure you have spellt it correctly.{% endtrans %}" required>
 			<button class="btn btn-large btn-primary" type="submit">{% trans "Register" %}</button>
 			<a href="{{base}}/login" class="btn btn-link">{% trans "Already registered?" %}</a>
 		</form>
@@ -25,8 +25,8 @@
 			{% include 'functions/openid.twig' %}
 		</div>
 	</div>
-	<div class="span8">
-		<hr class="visible-phone">
+	<div class="col-md-8">
+		<hr class="visible-xs">
 		<h4>{% trans %}What is this all about?{% endtrans %}</h4>
 		<p>
 			<a href="{{base}}/about" class="btn btn-success">{% trans %}About Lorry{% endtrans %}</a>
