--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -4,14 +4,14 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<div class="row-fluid" id="login">
-    <div class="span4">
+<div class="row" id="login">
+    <div class="col-md-4">
 		{% include 'functions/alert.twig' with {'selector' : 'login'} %}
-		<form id="form-login" method="post" action="{{ filename }}">
+		<form id="form-login" method="post" action="{{ filename }}" role="form">
 			<label for="username"></label>
-			<input type="text" class="input-block-level" name="username" id="username" placeholder="{% trans "Username" %}"{% if username %} value="{{ username|escape }}"{% endif %}{% if not username_exists %} autofocus{% endif %} required>
+			<input type="text" class="form-control" name="username" id="username" placeholder="{% trans "Username" %}"{% if username %} value="{{ username|escape }}"{% endif %}{% if not username_exists %} autofocus{% endif %} required>
 			<label for="password"></label>
-			<input type="password" class="input-block-level" name="password" id="password" placeholder="{% trans "Password" %}" {% if username and username_exists %} autofocus{% endif %} required>
+			<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" {% if username and username_exists %} autofocus{% endif %} required>
 			<label class="checkbox">
 				<input type="checkbox" name="remember" value="yes"{% if remember %} checked{% endif %}> {% trans "Remember on this device" %}
 			</label>
@@ -34,8 +34,8 @@
 			{% include 'functions/openid.twig' %}
 		</div>
 	</div>
-	<div class="span8">
-		<hr class="visible-phone">
+	<div class="col-md-8">
+		<hr class="visible-xs">
 		<h4>{% trans %}Welcome back!{% endtrans %}</h4>
 		<p>{% trans %}Nice to see you again! Have you visited these other great Clonk sites yet?{% endtrans %}</p>
 		<p><a href="http://openclonk.org">openclonk.org</a> &middot; <a href="http://clonkspot.org">clonkspot.org</a> &middot; <a href="http://clonkspot.org">clonkforge.net</a></p>
