--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -11,21 +11,22 @@
 		<meta property="og:title" content="{{title|default(brand)}}">
 		<meta property="og:image" content="{{base}}/img/logo.png">
 		<meta property="og:site_name" content="{{brand}}">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
-		<div class="container-fluid">
+		<div class="container">
 		{% block content %}
 		{% endblock %}
 		<hr>
 		<footer>
-			<p class="visible-phone">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
+			<p class="visible-xs">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
 			{% if site_notice %}<p><strong>{{site_notice}}</strong></p>{% endif %}
 			<p>
 				<a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}
 				<span class="muted"> ·
 					<a class="text" href="{{base}}/about">{% trans "About the project" %}</a>
-					· <a class="text" href="{{base}}/contact"><span class="visible-phone">{% trans "Contact" %}</span><span class="hidden-phone">{% trans "Contact us" %}</span></a><span class="hidden-phone">{% if site_trademark %} · {{site_trademark|raw}}{% endif %}</span></span>.</p>
+					· <a class="text" href="{{base}}/contact"><span class="visible-xs">{% trans "Contact" %}</span><span class="hidden-phone">{% trans "Contact us" %}</span></a><span class="hidden-phone">{% if site_trademark %} · {{site_trademark|raw}}{% endif %}</span></span>.</p>
 		</footer>
 	</div>
 	{% endblock %}
@@ -34,13 +35,13 @@
 	<script src="{{base}}/js/yepnope.min.js"></script>
 	<script src="{{base}}/js/lorry.js"></script>
 	<script>{% block javascript %}{% endblock %}</script>
-	<script>yepnope({
+	<!--<script>yepnope({
 		test: ('placeholder' in $('<input>')[0]),
 		nope: [
 				'{{base}}/poly/placeholder_polyfill.min.css',
 				'{{base}}/poly/placeholder_polyfill.jquery.min.combo.js'
 			  ]
-	});</script>
+	});</script>!-->
 	<script>(function() {
 			if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) {
 				var msViewportStyle = document.createElement("style");
