ported various pages

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -1,5 +1,10 @@
 .navbar-brand {
-	font-family: serif;
+
+}
+
+body {
+	background-image: url('../img/debut_light.png');
+	min-height: 100%;
 }
 
 a.text {
