--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -1,4 +1,5 @@
 <nav id="mainnav" class="navbar navbar-inverse navbar-static-top" role="navigation">
+	<div class="container">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -28,4 +29,5 @@
 	{% endif %}
     </ul>
   </div>
+</div>
 </nav>
