--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -1,33 +1,34 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<div class="row-fluid">
-	<div class="span4">
-		<hr class="visible-phone">
+<div class="page-header">
+	<h1>{{ title }}</h1>
+</div>
+<div class="row">
+	<div class="col-md-4">
 		<h2>{% trans %}User{% endtrans %}</h2>
 		{% if banned %}
-		<h4 id="banned">{% trans %}Banned{% endtrans %}</h4>
+		<h3 id="banned">{% trans %}Banned{% endtrans %}</h3>
 		<p class="alert alert-error">{% trans %}This user is banned.{% endtrans %}</p>
 		{% endif %}
 		{% if administrator or moderator %}
-		<h4 id="privileges">{% trans %}Privileges{% endtrans %}</h4>
+		<h3 id="privileges">{% trans %}Privileges{% endtrans %}</h3>
 		{% if administrator %}
 		<p class="alert alert-success">{% trans %}This user is administrator.{% endtrans %}</p>
 		{% elseif moderator %}
 		<p class="alert alert-success">{% trans %}This user is moderator.{% endtrans %}</p>
 		{% endif %}
 		{% endif %}
-		<h4 id="information">{% trans %}Information{% endtrans %}</h4>
+		<h3 id="information">{% trans %}Information{% endtrans %}</h3>
 		<p>Benutzername: {{username}}.</p>
 		{% if not self and user_administrator or (user_moderator and moderator == false) %}
-		<h4 id="moderate">{% trans %}Moderation{% endtrans %}</h4>
+		<h3 id="moderate">{% trans %}Moderation{% endtrans %}</h3>
 		<p>
 			<a href="" class="btn">{% trans %}Edit user{% endtrans %}</a>
 			<a href="#ban" data-toggle="collapse" data-target="#collapse-ban" class="btn btn-danger">{% trans %}Ban user{% endtrans %}</a>
 		</p>
 		<div id="collapse-ban" class="collapse{% if alerts.ban %} in{% endif %}">
-			<h4 id="ban">{% trans %}Ban user{% endtrans %}</h4>
+			<h3 id="ban">{% trans %}Ban user{% endtrans %}</h3>
 			{% include 'functions/alert.twig' with {'selector' : 'ban'} %}
 			<form method="post" action="{{filename}}?ban" class="form-horizontal">
 				<div class="control-group">
@@ -57,7 +58,7 @@
 		{% endif %}
 		{% if clonkforge or github %}
 		<div>
-			<h4>{% trans %}Profiles{% endtrans %}</h4>
+			<h3>{% trans %}Profiles{% endtrans %}</h3>
 			<ul>
 				{% if clonkforge %}<li><a href="{{clonkforge.url}}">{% trans %}username on the Clonk Forge{% endtrans %}</a></li>{% endif %}
 				{% if github %}<li><a href="{{github.url}}">{% trans %}username on GitHub{% endtrans %}</a></li>{% endif %}
@@ -65,20 +66,19 @@
 		</div>
 		{% endif %}
 	</div>
-	<div class="span8">
-		<hr class="visible-phone">
+	<div class="col-md-8">
 		<h2>{% trans %}Activity{% endtrans %}</h2>
-		<h4>{% trans %}Addons{% endtrans %}</h4>
+		<h3>{% trans %}Addons{% endtrans %}</h3>
 		{% if addons %}
 		<ul>
 		{% for addon in addons %}
-				<li><a href="{{ addon.url }}">{{ addon.title }}</a></li>
+			<li><a href="{{ addon.url }}">{{ addon.title }}</a></li>
 		{% endfor %}
 		</ul>
 		{% else %}
 		<div class="alert alert-warning">{% trans %}This user has not released any addons yet.{% endtrans %}</div>
 		{% endif %}
-		<h4>{% trans %}Comments{% endtrans %}</h4>
+		<h3>{% trans %}Comments{% endtrans %}</h3>
 		{% if comments %}
 		<table>
 		{% for comment in comments %}
