--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -3,10 +3,11 @@
 {% set title = 'Publish'|trans %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<div class="row-fluid">
-	<div class="span12">
-		<hr class="visible-phone">
+<div class="page-header">
+	<h1>{{ title }}</h1>
+</div>
+<div class="row">
+	<div class="col-md-12">
 		<h2>{% trans %}New addon{% endtrans %}</h2>
 		{% include 'functions/alert.twig' with {'selector' : 'create'} %}
 		<form method="post" action="{{filename}}" id="form-publish" class="form-inline">
@@ -25,8 +26,8 @@
 	</div>
 </div>
 <hr>
-<div class="row-fluid">
-	<div class="span6">
+<div class="row">
+	<div class="col-md-6">
 		<h2>{% trans %}Unreleased{% endtrans %}</h2>
 		{% if addons_unreleased %}
 		<ul class="media-list addons-small">
@@ -47,7 +48,7 @@
 		<div class="alert alert-warning">{% trans %}You have not created a new addon yet.{% endtrans %}</div>
 		{% endif %}
 	</div>
-	<div class="span6">
+	<div class="col-md-6">
 		<h2>{% trans %}Released{% endtrans %}</h2>
 		{% if addons_released %}
 		<ul class="media-list addons-small">
