--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -3,7 +3,9 @@
 {% set title = 'About Lorry'|trans %}
 
 {% block content %}
-<h1>{{ title }}</h1>
+<div class="page-header">
+	<h1>{{ title }}</h1>
+</div>
 <p>{% trans %}The Lorry project was created from three basic concepts:{% endtrans %}</p>
 <div class="row">
     <div class="col-md-4">
