--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -3,9 +3,11 @@
 {% set title = 'Contact us'|trans %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<div class="row-fluid">
-    <div class="span7">
+<div class="page-header">
+	<h1>{{ title }}</h1>
+</div>
+<div class="row">
+    <div class="col-md-7">
 		<h2>{% trans %}We &hearts; feedback{% endtrans %}</h2>
 		<p>{% trans %}We here are all fans of Clonk. We built this site as members of our community for the game and want to do our best.{% endtrans %}</p>
 		<p>{% trans %}If you have any wishes or should encounter any problem, do not hesitate to contact us:{% endtrans %}</p>
@@ -18,8 +20,7 @@
 			{% endif %}
 		</form>
     </div>
-	<div class="span5">
-		<hr class="visible-phone">
+	<div class="col-md-5">
 		<h2>{% trans %}Legal issues{% endtrans %}</h2>
 		{% if site_trademark %}
 		<p>{{ site_trademark|raw }}.</p>
@@ -29,7 +30,7 @@
 		<p>{% trans %}We are not responsible for the content of outgoing links. User generated content does not necessarily reflect the views of the site owners.{% endtrans %}</p>
 		{% if site_contact %}
 		<hr>
-		<h4>{% trans %}Responsible for the content{% endtrans %}</h4>
+		<h3>{% trans %}Responsible for the content{% endtrans %}</h3>
 		<address>
 			{{ site_contact|raw }}
 		</address>
