--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -40,7 +40,7 @@
 				<span class="icon-next"></span>
 			</a>
 		</div>
-		<h3><span class="hidden-phone">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-phone">{% trans %}New releases{% endtrans %}</span></h3>
+		<h3><span class="hidden-xs">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-xs">{% trans %}New releases{% endtrans %}</span></h3>
 		{% if new_addons %}
 		<ul class="media-list addons-small">
 			{% for addon in new_addons %}
@@ -67,24 +67,22 @@
 		{% endif %}
 			</div>
 			<div class="col-md-4">
-				<hr class="visible-phone">
 		{% if user_login %}
-				<h2>{% trans %}Welcome back.{% endtrans %}</h2>
+				<h1>{% trans %}Welcome back.{% endtrans %}</h1>
 		{% else %}
 				<h2><span class="hidden-phone">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-phone">{% trans %}Welcome{% endtrans %}</span></h2>
 		{% endif %}
 				<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
 				<p>
 					<a href="{{base}}/clonk" class="btn btn-success">{% trans %}New to Clonk?{% endtrans %}</a>
-					<a href="{{base}}/about" class="btn">{% trans %}About Lorry{% endtrans %}</a>
+					<a href="{{base}}/about" class="btn btn-default">{% trans %}About Lorry{% endtrans %}</a>
 				</p>
-				<hr>
-				<h3>Spotlight</h3>
+				<h1>Spotlight</h1>
 				<img src="http://clonkspot.org/images/logo.png" alt="clonkspot" style="height: 69px; width: 248px; margin-bottom: 12px;">
 				<p class="text-big">Clonkspot is a community platform introducing Clonk and features a blog and discussion board about various aspects of the games.</p>
 				<p>
 					<a href="http://clonkspot.org" class="btn btn-info">{% trans %}Visit clonkspot.org{% endtrans %}</a>
-					<a href="{{base}}/community" class="btn">{% trans %}List of community sites{% endtrans %}</a>
+					<a href="{{base}}/community" class="btn btn-default">{% trans %}List of community sites{% endtrans %}</a>
 				</p>
 				<hr>
 				<h3>{% trans %}Addons of the week{% endtrans %}</h3>
