updated front page

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -70,7 +70,7 @@
 		{% if user_login %}
 				<h1>{% trans %}Welcome back.{% endtrans %}</h1>
 		{% else %}
-				<h2><span class="hidden-phone">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-phone">{% trans %}Welcome{% endtrans %}</span></h2>
+				<h2><span class="hidden-xs">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-xs">{% trans %}Welcome{% endtrans %}</span></h2>
 		{% endif %}
 				<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
 				<p>
