--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -1,8 +1,10 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<div class="container" style="max-width: 770px;">
-	<h1>{{ title }}</h1>
+<div class="container">
+	<div class="page-header">
+		<h1>{{ title }} <small>{{version}}</small></h1>
+	</div>
 	{% if developer or team %}
 	<p class="pull-right author">
 		{% if developer %}
@@ -19,10 +21,9 @@
 	<a href="{{base}}/publish/{{game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit this addon{% endtrans %}</a>
 	<a href="{{base}}/publish/{{game.short}}/{{addon.short}}/{{version}}" class="btn">{% trans %}Edit this release{% endtrans %}</a>
 	{% endif %}
-	<hr>
-	<div class="row-fluid">
-		<div class="span3">
-		<p class="" style="font-size: 0;">
+	<div class="row">
+		<div class="col-md-4">
+			<p class="" style="font-size: 0;">
 				<img src="{{base}}img/title.png" style="width: 100%; margin-bottom: 2%;">
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 2%;">
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 2%;">
@@ -34,40 +35,40 @@
 				<p class="center">
 					Requires
 					{% for requirement in requirements %}
-						<a href="{{base}}/addons/{{requirement.game}}/{{requirement.short}}">{{ requirement.title }}</a>
+					<a href="{{base}}/addons/{{requirement.game}}/{{requirement.short}}">{{ requirement.title }}</a>
 					{% endfor %}
 				</p>
 				{% endif %}
 			</div>
 		</div>
-		<div class="span9">
+		<div class="col-md-4">
 			{% if addon_description %}
-				<p>{{ addon_description }}</p>
+			<p>{{ addon_description }}</p>
 			{% else %}
-				<p><em>{% trans %}This addon has no description.{% endtrans %}</em></p>
+			<p><em>{% trans %}This addon has no description.{% endtrans %}</em></p>
 			{% endif %}
 			{% if release_description %}
-				<p>{{ release_description }}</p>
+			<p>{{ release_description }}</p>
 			{% endif %}
 			<p>{% trans %}Categories{% endtrans %} <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>
 		</div>
-	</div>
-	<hr>
-	<div class="row-fluid">
-		<div class="span8">
-			<h3>{% trans %}Rounds and Addons{% endtrans %}</h3>
-			<img src="" style="width: 150px; height: 105px;">
-			<img src="" style="width: 150px; height: 105px;">
-			<img src="" style="width: 150px; height: 105px;">
-		</div>
-		<div class="span4">
-			<h3>{% trans %}Community{% endtrans %}</h3>
+		<div class="col-md-4">
+			<h2>{% trans %}Community{% endtrans %}</h2>
 			<p>State: <span class="success">Active</span> [<a href="#" id="state">?</a>]</p>
 			<ul>
 				{% if website %}<li><a href="{{website}}">{% trans %}Project page{% endtrans %}</a></li>{% endif %}
 				{% if bugtracker %}<li><a href="{{bugtracker}}">{% trans %}Report a bug{% endtrans %}</a></li>{% endif %}
 				<li><a href="#">{% trans %}Interested in an update?{% endtrans %}</a></li>
 			</ul>
+		</div>
+	</div>
+	<hr>
+	<div class="row">
+		<div class="col-md-8">
+			<h2>{% trans %}Rounds and Addons{% endtrans %}</h2>
+			<img src="" style="width: 150px; height: 105px;">
+			<img src="" style="width: 150px; height: 105px;">
+			<img src="" style="width: 150px; height: 105px;">
 		</div>
 	</div>
 </div>
