--- a/app/templates/functions/openid.twig
+++ b/app/templates/functions/openid.twig
@@ -4,9 +4,11 @@
 	<a href="?openid=facebook" class="btn btn-primary">{% trans "Facebook" %}</a>
 </p>
 <div class="collapse" id="by-openid">
-	<form action="{{filename}}?openid=custom" method="post" class="form-inline">
-		<input type="url" name="openid-provider" id="openid-provider" placeholder="{% trans %}OpenID url{% endtrans %}" required>
+	<form role="form" action="{{filename}}?openid=custom" method="post" class="form-inline">
+		<div class="form-group">
+			<label class="sr-only" for="openid-provider">{% trans %}OpenID url{% endtrans %}</label>
+			<input type="url" class="form-control" name="openid-provider" id="openid-provider" placeholder="{% trans %}OpenID url{% endtrans %}" required>			
+		</div>
 		<button type="submit" class="btn btn-primary">{% trans %}Confirm{% endtrans %}</button>
-		<label for="openid-provider"></label>
 	</form>
 </div>
