update publish portal to bootstrap 3

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -11,8 +11,12 @@
 		<h2>{% trans %}New addon{% endtrans %}</h2>
 		{% include 'functions/alert.twig' with {'selector' : 'create'} %}
 		<form method="post" action="{{filename}}" id="form-publish" class="form-inline">
-				<input type="text" name="title" id="title" value="{{addon_title}}" maxlength="32" required{% if focus == 'title' %} autofocus{% endif %} placeholder="{% trans %}Full title{% endtrans %}">
-				{% if games and games|length > 1%}<select name="game" id="game" required>
+			<div class="form-group">
+				<label for="title" class="sr-only">{% trans %}Full title{% endtrans %}</label>
+				<input type="text" class="form-control" name="title" id="title" value="{{addon_title}}" maxlength="32" required{% if focus == 'title' %} autofocus{% endif %} placeholder="{% trans %}Full title{% endtrans %}">
+			</div>
+			<div class="form-group">
+				{% if games and games|length > 1%}<select class="form-control" name="game" id="game" required>
 					<option value="">{% trans %}Select a game&hellip;{% endtrans %}</option>
 					{% for game in games %}
 					<option value="{{game.short}}"{% if game.selected %} selected{% endif %}>{{ game.title }}</option>
@@ -20,8 +24,8 @@
 					<option>{% trans %}No game available{% endtrans %}</option>
 					{% endfor %}
 				</select>{% endif %}
-				<button type="submit" class="btn btn-primary">{% trans "Create addon" %}</button>
-				<label class="control-label" for="title"></label>
+			</div>
+			<button type="submit" class="btn btn-primary">{% trans "Create addon" %}</button>
 		</form>
 	</div>
 </div>
@@ -66,7 +70,7 @@
 		{% endfor %}
 		</ul>
 		{% else %}
-			<div class="alert alert-warning">{% trans %}You have not released an addon yet.{% endtrans %}</div>
+		<div class="alert alert-warning">{% trans %}You have not released an addon yet.{% endtrans %}</div>
 		{% endif %}
 	</div>
 </div>
@@ -75,12 +79,12 @@
 {% block javascript %}
 {{ parent() }}
 
-	$(document).ready(function() {
-	$('#form-publish input, #form-publish select').each(function() {
-	$(this).addClass('noerror')
-	var require = function() {$(this).removeClass('noerror');};
-	$(this).keydown(require);
-	$(this).blur(require);
-	});
-	});
+$(document).ready(function() {
+$('#form-publish input, #form-publish select').each(function() {
+$(this).addClass('noerror')
+var require = function() {$(this).removeClass('noerror');};
+$(this).keydown(require);
+$(this).blur(require);
+});
+});
 {% endblock %}
