--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -11,7 +11,11 @@ a.text {
 	color: inherit;
 }
 
-//IE fixes
+.carousel-caption h3 {
+	font-size: 1.2em;
+}
+
+/* IE fixes */
 
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
