--- a/app/templates/account/identify.twig
+++ b/app/templates/account/identify.twig
@@ -11,7 +11,7 @@
 		<form id="form-identify" method="post" class="form-inline" action="{{ filename }}" role="form">
 			<div class="form-group">
 				<label class="sr-only" for="password">{% trans "Password" %}</label>
-				<input type="password" name="password" id="password" placeholder="{% trans "Password" %}" autofocus required>
+				<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" autofocus required>
 			</div>
 			<button type="submit" class="btn btn-primary">{% trans "Confirm" %}</button>
 		</form>
