make mainnav borderloss to content

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -15,6 +15,10 @@ a.text {
 	font-size: 1.2em;
 }
 
+#mainnav {
+	margin-bottom: 0px;
+}
+
 /* IE fixes */
 
 @-webkit-viewport   { width: device-width; }
